Fixing: Style failure on iPhone

--- a/public/less/reboto.less
+++ b/public/less/reboto.less
@@ -286,7 +286,7 @@ input[type=text] {
 }
 
 .input-task {
-  width: 48%;
+  width: 42%;
   height: 42px;
   margin-top: 20px;
   font-size: 1rem;
